<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_bottom_padding"
    android:paddingTop="@dimen/activity_top_padding"
    android:paddingLeft="@dimen/activity_left_padding"
    android:paddingRight="@dimen/activity_right_padding"
    tools:context="com.victoraboytes.formulario.ConfirmarDatos">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <TextView
            android:id="@+id/txtvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textStyle="bold"
            android:textSize="20dp"/>

        <TextView
            android:id="@+id/txtvDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textSize="15dp"/>

        <TextView
            android:id="@+id/txtvPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone"
            android:textSize="15dp"/>

        <TextView
            android:id="@+id/txtvEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textSize="15dp"/>

        <TextView
            android:id="@+id/txtvDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contact_description"
            android:textSize="15dp"/>

        <Button
            android:id="@+id/btnEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_edit"
            android:layout_gravity="center"
            android:theme="@style/ButtonNextTheme"/>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>